<resources>
    <string name="app_name">Message Owl</string>
    <string name="welcome_message">Welcome to Message Owl</string>
    <string name="enter_number">Enter your phone number</string>
    <string name="proceed">Proceed</string>
    <string name="back">Back</string>
    <string name="resend">Resend</string>
    <string name="cancel">Cancel</string>
    <string name="change_number">Change number</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="update_number">Update number</string>
    <string name="participants">Participants</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="username_hint">Enter a username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="message_contacts">Message your contacts</string>
    <string name="change_number_warning">Changing your mobile number will clear your chats.
    If you wish to update your number instead use \"Update number\"</string>
    <string name="error_message">An error occurred</string>
    <string name="invalid_verification_code">"The verification code entered was invalid"</string>
    <string name="user_exists">"A user already exists with this number"</string>
    <string name="photo_upload_error">Unable to upload photo</string>
    <string name="photo_download_error">Unable to download photo</string>
    <string name="image_dialog_title">Select image from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="reply">Reply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="message_owl_logo">Message Owl Logo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="message_hint">Enter your message</string>
</resources>