<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.CompleteProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="56dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/complete_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/complete_profile"
            style="@style/TextAppearance.Material3.HeadlineMedium"/>

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/complete_profile_text"
            app:srcCompat="?attr/colorSecondaryContainer"
            android:layout_marginTop="28dp"
            tools:srcCompat="@tools:sample/avatars"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            app:icon="@drawable/ic_camera"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintEnd_toEndOf="@id/profile_image"/>

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:maxLength="20"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/username_field"
            app:layout_constraintEnd_toEndOf="@id/username_field"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>